<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ContactActivity" >

    <TextView
        android:id="@+id/contactTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/CO"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/adressBrTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/contactTitle"
        android:textStyle="bold"
        android:layout_marginTop="27dp"
        android:text="@string/addressBrTitle"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/adressBr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/adressBrTitle"
        android:layout_below="@+id/adressBrTitle"
        android:text="@string/addressBr"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/adressFr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/adressFrTitle"
        android:layout_below="@+id/adressFrTitle"
        android:text="@string/addressFr"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/contactMail1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/email"
        android:layout_below="@+id/email"
        android:autoLink="email"
        android:text="felipe.matias-camargo@insa-lyon.fr"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/contactMail2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/contactMail1"
        android:layout_below="@+id/contactMail1"
        android:autoLink="email"
        android:text="felipe.matias371@gmail.com"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/adressFr"
        android:layout_below="@+id/adressFr"
        android:text="Email:"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/adressFrTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/adressBr"
        android:layout_below="@+id/adressBr"
        android:text="@string/addressFrTitle"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

</RelativeLayout>
